syntax = "proto3";

package aperture.controlpointcache.v1;

message KubernetesControlPoint {
  string group = 1;
  string api_version = 2;
  string kind = 3;
  string namespace = 4;
  string name = 5;
}
